; ModuleID = '/home/carl/AnghaBench/libui/unix/extr_datetimepicker.c_showPopup.c'
source_filename = "/home/carl/AnghaBench/libui/unix/extr_datetimepicker.c_showPopup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32* }

@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_8__*)* @showPopup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @showPopup(%struct.TYPE_8__* %0) #0 {
  %2 = alloca %struct.TYPE_8__*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.TYPE_8__* %0, %struct.TYPE_8__** %2, align 8
  %6 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %7 = call i32 @GTK_WIDGET(%struct.TYPE_8__* %6)
  %8 = call i32* @gtk_widget_get_toplevel(i32 %7)
  store i32* %8, i32** %3, align 8
  %9 = load i32*, i32** %3, align 8
  %10 = call i64 @GTK_IS_WINDOW(i32* %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %21

12:                                               ; preds = %1
  %13 = load i32*, i32** %3, align 8
  %14 = call i32 @GTK_WINDOW(i32* %13)
  %15 = call i32 @gtk_window_get_group(i32 %14)
  %16 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %17 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %16, i32 0, i32 0
  %18 = load i32*, i32** %17, align 8
  %19 = call i32 @GTK_WINDOW(i32* %18)
  %20 = call i32 @gtk_window_group_add_window(i32 %15, i32 %19)
  br label %21

21:                                               ; preds = %12, %1
  %22 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %23 = call i32 @allocationToScreen(%struct.TYPE_8__* %22, i32* %4, i32* %5)
  %24 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %25 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %24, i32 0, i32 0
  %26 = load i32*, i32** %25, align 8
  %27 = call i32 @GTK_WINDOW(i32* %26)
  %28 = load i32, i32* %4, align 4
  %29 = load i32, i32* %5, align 4
  %30 = call i32 @gtk_window_move(i32 %27, i32 %28, i32 %29)
  %31 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %32 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %31, i32 0, i32 0
  %33 = load i32*, i32** %32, align 8
  %34 = call i32 @gtk_widget_show(i32* %33)
  %35 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %36 = load i32, i32* @TRUE, align 4
  %37 = call i32 @setActive(%struct.TYPE_8__* %35, i32 %36)
  %38 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %39 = call i32 @startGrab(%struct.TYPE_8__* %38)
  %40 = icmp ne i32 %39, 0
  br i1 %40, label %44, label %41

41:                                               ; preds = %21
  %42 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %43 = call i32 @hidePopup(%struct.TYPE_8__* %42)
  br label %44

44:                                               ; preds = %41, %21
  ret void
}

declare dso_local i32* @gtk_widget_get_toplevel(i32) #1

declare dso_local i32 @GTK_WIDGET(%struct.TYPE_8__*) #1

declare dso_local i64 @GTK_IS_WINDOW(i32*) #1

declare dso_local i32 @gtk_window_group_add_window(i32, i32) #1

declare dso_local i32 @gtk_window_get_group(i32) #1

declare dso_local i32 @GTK_WINDOW(i32*) #1

declare dso_local i32 @allocationToScreen(%struct.TYPE_8__*, i32*, i32*) #1

declare dso_local i32 @gtk_window_move(i32, i32, i32) #1

declare dso_local i32 @gtk_widget_show(i32*) #1

declare dso_local i32 @setActive(%struct.TYPE_8__*, i32) #1

declare dso_local i32 @startGrab(%struct.TYPE_8__*) #1

declare dso_local i32 @hidePopup(%struct.TYPE_8__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
